Add cookie consent warning
Adds a simple consent warning based on
https://silktide.com/tools/cookie-consent/.

--- a/templates/base.html
+++ b/templates/base.html
@@ -330,6 +330,7 @@
     <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
     <!-- twitchy Script -->
     <script src="{{ SITEURL }}/theme/js/pelican_twitchy.min.js"></script>
+    {% include 'include/cookieconsent.html' %}
     {% include 'include/ga.html' %}
     {% block scripts %}
     {% endblock %}
