More consistent social icon look, support for gitlab
 Removed the loops associated with translating names into fa-name-square
 as those icons didn't seem to fit the uniformity of the theme anyhow as a
 result, gitlab and many other non-square icons can be easily supported.
 Since the spacing without class fa-fw is non-uniform, that was also
 added.

 All that is required of the user is that they go look for the name at:

 http://fontawesome.io/cheatsheet/

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,7 @@
 {%- endmacro %}
 {% macro get_icon_attributes(name) -%}
     {%- set name_sanitized = name|lower|replace('+','-plus')|replace(' ','-') -%}
-    {%- if name_sanitized in ['flickr', 'spotify', 'stack-overflow'] -%}
-        {%- set iconattributes = 'fa fa-' ~ name_sanitized ~ ' fa-lg' -%}
-    {%- else -%}
-        {%- set iconattributes = 'fa fa-' ~ name_sanitized ~ '-square fa-lg' -%}
-    {%- endif -%}
+    {%- set iconattributes = 'fa fa-' ~ name_sanitized ~ ' fa-lg fa-fw' -%}
     {%- if name|lower == 'email' -%}
         {%- set iconattributes = 'fa fa-envelope-square fa-lg' -%}
     {%- endif -%}
