--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,12 @@
 {%- endmacro %}
 {% macro get_icon(name) -%}
     {%- set name_sanitized = name|lower|replace('+','-plus')|replace(' ','-') -%}
-    {%- set iconattributes = 'fa fa-' ~ name_sanitized ~ ' fa-lg fa-fw' -%}
-    {%- if name|lower == 'email' -%}
-        {%- set name = 'envelope' -%}
+    {%- if name_sanitized|lower == 'email' -%}
+        {%- set name_sanitized = 'envelope' -%}
     {%- endif -%}
 <span class="fa-stack fa-lg">
       <i class="fa fa-square-o fa-stack-2x"></i>
-      <i class="fa fa-{{name}} fa-stack-1x"></i>
+      <i class="fa fa-{{name_sanitized}} fa-stack-1x"></i>
 </span>
 {%- endmacro %}
 {% if article or page %}
@@ -100,17 +99,17 @@
                 <li class="panel anti-panel"><ul id="collapse-share-small" class="collapse {% block collapse_share_small %}{% endblock %}">
                     <li>
                         <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" title="Share via Facebook" target="popup">
-                            get_icon(facebook)
+                            {{get_icon(facebook)}}
                         </a>
                     </li>
                     <li>
                         <a href="https://plus.google.com/share?url={{share_url}}" title="Share via Google+" target="popup">
-                            get_icon(google+)
+                            {{get_icon(google+)}}
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" title="Share via Twitter" target="popup">
-                            get_icon(twitter)
+                            {{get_icon(twitter)}}
                         </a>
                     </li>
                 </ul></li>
@@ -188,19 +187,19 @@
                 <li class="panel anti-panel"><ul id="collapse-share" class="sidebar_submenu collapse {% block collapse_share %}{% endblock %}">
                     <li>
                         <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" target="popup">
-                            get_icon(facebook)
+                            {{get_icon(facebook)}}
                             Facebook
                         </a>
                     </li>
                     <li>
                         <a href="https://plus.google.com/share?url={{share_url}}" target="popup">
-                            get_icon(google+)
+                            {{get_icon(google+)}}
                             Google+
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" target="popup">
-                            get_icon(twitter)
+                            {{get_icon(twitter)}}
                             Twitter
                         </a>
                     </li>
