Try with sanitzed googleplus

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                     </li>
                     <li>
                         <a href="https://plus.google.com/share?url={{share_url}}" title="Share via Google+" target="popup">
-                            {{get_icon(google+)}}
+                            {{get_icon(google-plus)}}
                         </a>
                     </li>
                     <li>
@@ -193,7 +193,7 @@
                     </li>
                     <li>
                         <a href="https://plus.google.com/share?url={{share_url}}" target="popup">
-                            {{get_icon(google+)}}
+                            {{get_icon(google-plus)}}
                             Google+
                         </a>
                     </li>
