Make Sidebar use Bootstrap colouring
We used to manually provide the colour of the sidebar as well as the
'view all articles' button. This is a problem when using some bootstrap
colourschemes that conflict with the provided colour.

This removes the manual twitchy-background css class and uses
btn-default to style the backgrounds of the theme which should never
conflict with the themes.

--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -1,7 +1,3 @@
-.twitchy-background{
-    background: #272724;
-}
-
 #wrapper {
     padding-left: 40px;
     /*
@@ -310,7 +306,7 @@ span.glyphicon-chevron-down, .collapsed span.glyphicon-chevron-up{
 
 .anti-panel{
     margin-bottom: 0px;
-    background-color: #272724;
+    background-color: transparent;
     border: 0px;
     -webkit-box-shadow: 0 0 0 0;
     box-shadow: 0 0 0 0;
