--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 <body data-spy="scroll" data-target="#scrollspy">
     <div id="wrapper">
         <!-- Sidebar -->
-        <div id="sidebar-wrapper-small" class="twitchy-background">
+        <div id="sidebar-wrapper-small" class="btn-default">
             <ul id="accordion-small" class="sidebar-nav sidebar-nav-small">
                 {{ nav_small_li(SITEURL, SITENAME, '<span class="glyphicon glyphicon-home"></span>') }}
                 <li class="nav-divider"></li>
@@ -135,7 +135,7 @@
                 {{ nav_small_li('#', 'Back to top', '<span class="fa fa-arrow-up"></span>') }}
             </ul>
         </div>
-        <div id="sidebar-wrapper" class="twitchy-background">
+        <div id="sidebar-wrapper" class="btn-default">
             <ul id="accordion" class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="{{ SITEURL }}/">
