--- a/templates/article.html
+++ b/templates/article.html
@@ -48,7 +48,7 @@
                     {{ article.content }}
                 </div>
                 <footer class="text-right">
-                    <p>- {{article.author}}</p>
+                    <p>{{article.author}}</p>
                 </footer>
                 {% include 'include/comments.html' %}
             </div>
