typo and translate

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,11 +1,11 @@
 {% extends "include/article_list.html" %}
-{% block title %}Recent Articles - {{ SITENAME }}{% endblock %}
+{% block title %}{{ SITENAME }} - Articles Récents{% endblock %}
 
 {% block precontent %}
 <div class="row">
     <div class="col-lg-9">
         <header class="page-header">
-            <h1>Archive</h1>
+            <h1>Archives</h1>
         </header>
     </div>
 </div>
