--- a/templates/tag.html
+++ b/templates/tag.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-lg-9">
         <header class="page-header">
-            <h1>Articles featuring {{ tag }}</h1>
+            <h1>{{ tag|title }}</h1>
         </header>
     </div>
 </div>
