remove post-info class

--- a/templates/include/article_info.html
+++ b/templates/include/article_info.html
@@ -1,4 +1,4 @@
-<div class="post-info">
+<div class="">
     <div class="publish-info-block">
         <small>
             <span class="published">
@@ -17,4 +17,4 @@
             {% endif %}
         </small>
     </div>
-</div><!-- /.post-info -->
+</div>
