--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -4,10 +4,12 @@
 <div class="row">
     <div class="col-lg-9">
     {% if articles %}
+    	{% include "include/pagination.html" %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
                 <h4>
                     <time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
+                    &nbsp;
                     <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
                 </h4>
             </article>
@@ -18,23 +20,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script>
-    function FadeInOnScroll(ObjectList){
-        ObjectList.each(function(i) {
-            var bottom_of_object = $(this).position().top + $(this).outerHeight();
-            var bottom_of_window = $(window).scrollTop() + $(window).height();
-
-            if( bottom_of_window > bottom_of_object ){
-                $(this).fadeTo(750,1);
-            }
-        });
-    }
-
-    articles = $("article").fadeTo(0, 0.05);
-    FadeInOnScroll(articles)
-
-    $(window).scroll(function() {
-        FadeInOnScroll(articles)
-    });
-</script>
+	{% include "include/article-list-script.html" %}
 {% endblock %}
