--- a/templates/include/ga.html
+++ b/templates/include/ga.html
@@ -1,4 +1,16 @@
-{% if GOOGLE_ANALYTICS %}
+{% if GOOGLE_ANALYTICS_UNIVERSAL %}
+    <!-- Google Analytics Universal -->
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', '{{ GOOGLE_ANALYTICS_UNIVERSAL }}', '{{ GOOGLE_ANALYTICS_UNIVERSAL_PROPERTY }}');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics Universal Code -->
+{% elif GOOGLE_ANALYTICS %}
     <!-- Google Analytics -->
     <script type="text/javascript">
 
@@ -16,17 +28,4 @@
         })();
     </script>
     <!-- End Google Analytics Code -->
-{% endif %}
-{% if GOOGLE_ANALYTICS_UNIVERSAL %}
-    <!-- Google Analytics Universal -->
-    <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{ GOOGLE_ANALYTICS_UNIVERSAL }}', '{{ GOOGLE_ANALYTICS_UNIVERSAL_PROPERTY }}');
-        ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics Universal Code -->
 {% endif %}
