--- a/templates/include/open_graph.html
+++ b/templates/include/open_graph.html
@@ -43,7 +43,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ SITENAME }}"/>
     <meta property="og:url" content="{{ SITEURL }}"/>
-    <meta property="og:description" content="{{ SITENAME }}"/>
+    <meta property="og:description" content="{{ SITENAME }} - {{ SITESUBTITLE|escape }} Par {{ AUTHOR }}"/>
     {% if OPEN_GRAPH_IMAGE %}
         <meta property="og:image"
         content="{{ SITEURL }}/{{ OPEN_GRAPH_IMAGE }}"/>
