--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,27 @@
 {% extends "base.html" %}
 {% block title %}{{ SITENAME }}{% endblock %}
 
-{% block canonical_rel %}
-<link rel="canonical" href="{{ SITEURL }}">
-{% endblock %}
-
 {% block collapse_latest %}in{% endblock %}
 
 {% block precontent %}
 <section id="content" class="body">
     <div class="row">
         <div class="col-lg-9">
-            <div class="jumbotron">  
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1>{{ SITENAME }}</h1>
-                        <p>{{ SITESUBTITLE }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-9">
-            <h2>Recent Articles:</h2>
+			<div class="media" id="index-promo">
+				<div class="media-left">
+					<a href="{{SITEURL}}" title="Accueil">
+						<img class="media-object img-thumbnail" src="{{SITEURL}}/{{THEME_STATIC_DIR}}/{{AUTHOR_IMAGE}}" alt="{{AUTHOR}}">
+					</a>
+				</div>
+				<div class="media-body">
+					<h2 class="media-heading">{{ SITENAME }}
+                        <p><small>{{ SITESUBTITLE }}</small></p>
+                        {% if SITESUBTITLE2 is defined %}
+                        <p><small>{{ SITESUBTITLE2 }}</small></p>
+                        {% endif %}
+					</h2>
+				</div>
+			</div>
         </div>
     </div>
 </section>
@@ -31,25 +29,35 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-lg-9">
+    <div class="col-md-9">
     {% if articles %}
-        {% for article in (all_articles if all_articles else articles)[:RECENT_POST_COUNT] %}
+    	<p>&nbsp;</p>
+    	{% include "include/pagination.html" %}
+        {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
-                <h2>
-                    <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
-                    {% include "include/article_info.html" %}
-                </h2>
-                <div class="summary">
-                    {{ article.summary }}
-                </div>
+				<div class="media">
+				  <div class="media-left media-middle">
+				    <a href="{{ SITEURL }}/{{ article.url }}">
+				      <img class="media-object article-icons" src="{{SITEURL}}/{{THEME_STATIC_DIR}}/icons/{{loop.cycle(*ICONS)}}.png" alt="{{ article.title }}|striptags|escape" />
+				    </a>
+				  </div>
+				  <div class="media-body">
+				    <h3 class="media-heading">
+				    	<a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+				    	{% include "include/article_info.html" %}
+				    </h3>
+				    {% if DISPLAY_SUMMARY_ON_INDEX|default(True) %}
+                	<div class="summary">
+                    	{{ article.summary }}
+                	</div>
+                	{% endif %}
+				  </div>
+				</div>            
             </article>
-            {% if not loop.last %}
-            <hr/>
-            {% endif %}
         {% endfor %}
         <div class="btn-more text-right">
-            <a class="btn btn-default btn-xs twitchy-background" href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
-                View all Articles ...
+            <a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
+                Voir tous les articles ...
             </a>
         </div>
     {% endif %}
@@ -58,23 +66,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script>
-    function FadeInOnScroll(ObjectList){
-        ObjectList.each(function(i) {
-            var bottom_of_object = $(this).position().top + $(this).outerHeight();
-            var bottom_of_window = $(window).scrollTop() + $(window).height();
-
-            if( bottom_of_window > bottom_of_object ){
-                $(this).fadeTo(750,1);
-            }
-        });
-    }
-    articles = $("article").fadeTo(0, 0.05);
-    FadeInOnScroll(articles)
-    $(window).scroll(function() {
-        FadeInOnScroll(articles)
-    });
-</script>
+	{% include "include/article-list-script.html" %}
 {% endblock %}
 
 
