--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -6,7 +6,7 @@
     {% if articles %}
     	{% include "include/pagination.html" %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
-            <article>
+            <article class="article-list">
                 <h4>
                     <time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
                     &nbsp;
@@ -19,6 +19,3 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
-	{% include "include/article-list-script.html" %}
-{% endblock %}
