--- a/templates/include/cc-license.html
+++ b/templates/include/cc-license.html
@@ -34,7 +34,8 @@
                          derivatives, commercial,
                          br_after_icon=false,
                          attr_markup=false,
-                         attr_props={}) %}
+                         attr_props={},
+                         default_lang="") %}
   {% if cc_name %}
     {% set cc_name = cc_name|lower|replace("cc-","") %}
   {% else %}
@@ -52,13 +53,13 @@
       {% set cc_title_suffix = cc_title_suffix ~ "-ShareAlike" %}
     {% endif %}
   {% endif %}
-  {% set cc_title, cc_uri, cc_icon = ("Creative Commons Attribution 4.0 InternationalCCSUFFIX License","http://creativecommons.org/licenses/CCNAME/4.0/","//i.creativecommons.org/l/CCNAME/4.0/80x15.png") %}
-  <a rel="license" href="{{ cc_uri|replace('CCNAME',cc_name) }}"><img alt="Creative Commons License" style="border-width:0" src="{{ cc_icon|replace('CCNAME',cc_name) }}" /></a>
+  {% set cc_title, cc_uri, cc_icon = ("Creative Commons Attribution 4.0 InternationalCCSUFFIX License","http://creativecommons.org/licenses/CCNAME/4.0/CCLANG","//i.creativecommons.org/l/CCNAME/4.0/80x15.png") %}
+  <a rel="license" target="_blank" href="{{ cc_uri|replace('CCNAME',cc_name)|replace('CCLANG', default_lang) }}"><img alt="Creative Commons License" style="border-width:0" src="{{ cc_icon|replace('CCNAME',cc_name) }}" /></a>
   {% if br_after_img %}<br/>{% endif %}
   {% if attr_markup %}
-    &quot;<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">{{ attr_props['title'] }}</span>&quot; by <a xmlns:cc="http://creativecommons.org/ns#" href="{{ attr_props['url'] }}" property="cc:attributionName" rel="cc:attributionURL">{{ attr_props['name'] }}</a> is
+    &quot;<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">{{ attr_props['title'] }}</span>&quot; by <a xmlns:cc="http://creativecommons.org/ns#" target="_blank" href="{{ attr_props['url'] }}" property="cc:attributionName" rel="cc:attributionURL">{{ attr_props['name'] }}</a> is
   {% else %}
     Content
   {% endif %}
-  licensed under a <a rel="license" href="{{ cc_uri|replace('CCNAME',cc_name) }}">{{ cc_title|replace('CCSUFFIX',cc_title_suffix) }}</a>, except where indicated otherwise.
+  licensed under a <a rel="license" target="_blank" href="{{ cc_uri|replace('CCNAME',cc_name)|replace('CCLANG', default_lang) }}">{{ cc_title|replace('CCSUFFIX',cc_title_suffix) }}</a>, sauf indication contraire.
 {% endmacro %}
