--- a/templates/sidebar/share.html
+++ b/templates/sidebar/share.html
@@ -8,19 +8,19 @@
 </li>
 <li class="panel anti-panel"><ul id="collapse-share" class="sidebar_submenu collapse {% block collapse_share %}{% endblock %}">
     <li>
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" target="popup">
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" target="popup">
             <i class="fa fa-facebook-square padding-small"></i>
             Facebook
         </a>
     </li>
     <li>
-        <a href="https://plus.google.com/share?url={{share_url}}" target="popup">
+        <a target="_blank" href="https://plus.google.com/share?url={{share_url}}" target="popup">
             <i class="fa fa-google-plus padding-small"></i>
             Google+
         </a>
     </li>
     <li>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" target="popup">
+        <a target="_blank" href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" target="popup">
             <i class="fa fa-twitter-square padding-small"></i>
             Twitter
         </a>
